@@ -126,31 +126,11 @@ function _workflow_rules_set_state(array $parameters, RulesAction $action) {
 
   $transition = new WorkflowTransition();
   $transition->setValues($entity_type, $entity, $field_name, $old_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
-
   // Force this transition, to ignore the limitations on the current user's permissions.
-  $force = TRUE;
+  $transition->force(TRUE);
+
   // Execute the transition. It may bounce, due to extra checks.
-  $sid = $transition->execute($force);
-
-  // Workflow Node has now finished. Workflow Field must still update the field.
-  // @todo: shouldn't this already have happended with $transition->execute()?
-  if ($field_name && isset($entity->{$field_name})) {
-    if ($sid == $new_sid) {
-      $entity_id = entity_id($entity_type, $entity);
-      if ($entity_id) {
-        // Save the entity, but not through entity_save(),
-        // since this will check permissions again and trigger rules.
-        // @TODO: replace below by a workflow_field setter callback.
-        // The transition was successfully executed, or else a message was raised.
-        $langcode = _workflow_metadata_workflow_get_properties($entity, array(), 'langcode', $entity_type, $field_name);
-        $entity->{$field_name}[$langcode] = array();
-        $entity->{$field_name}[$langcode][0]['workflow']['workflow_sid'] = $new_sid;
-        $entity->{$field_name}[$langcode][0]['workflow']['workflow_comment'] = $comment;
-        field_attach_update($entity_type, $entity);
-
-        // Reset the entity cache after update.
-        entity_get_controller($entity_type)->resetCache(array($entity_id));
-      }
-    }
-  }
+  // @todo: use $new_sid = $transition->execute() without generating infinite loops.
+  // Below method does not recalc tokens on automatic_entity_label.
+  $new_sid = workflow_execute_transition($entity_type, $entity, $field_name, $transition);
 }
