@@ -590,3 +590,4 @@ Issue #2331969 by LCM: Fixed available transitions for non-author in WorkflowSta
 Issue #1988990: Added translatability of Workflow Field.
 Issue #1988990: Added translatability of Workflow Field - execute scheduled transitions.
 Issue #2338547: Fixed revision_id is not set when executing a Scheduled Transitions.
+Issue #2323025: Fixed Rules Action 'Set a Workflow Field State' does not work.
